import sys
from exploits import Exploits
from report import Report

class CLI:
    def start_interface(self):
        """
        Start the command-line interface for the vulnerability exploitation tool.
        """
        exploits = Exploits()
        findings = {}

        print("Welcome to the Web Vulnerability Exploitation Tool")
        print("Please choose an option:")
        print("1. SQL Injection")
        print("2. XSS Attack")
        print("3. Command Injection")
        print("4. Exit")

        while True:
            choice = input("Enter your choice (1-4): ")

            if choice == '1':
                url = input("Enter the URL for SQL Injection test: ")
                result = exploits.sql_injection(url)
                findings['SQL Injection'] = result
                print("SQL Injection findings:", result)

            elif choice == '2':
                url = input("Enter the URL for XSS Attack test: ")
                result = exploits.xss_attack(url)
                findings['XSS Attack'] = result
                print("XSS Attack findings:", result)

            elif choice == '3':
                url = input("Enter the URL for Command Injection test: ")
                result = exploits.command_injection(url)
                findings['Command Injection'] = result
                print("Command Injection findings:", result)

            elif choice == '4':
                if findings:
                    print("Generating report...")
                    report = Report()
                    report_content = report.generate_report(findings)
                    print("Report generated:")
                    print(report_content)
                print("Exiting...")
                break

            else:
                print("Invalid choice. Please enter a number between 1 and 4.")
