## report.py
import json

class Report:
    def generate_report(self, findings: dict) -> str:
        """
        Generate a report based on the findings from the vulnerability tests.

        Args:
            findings (dict): A dictionary containing the results of the vulnerability tests.

        Returns:
            str: A formatted string report of the findings.
        """
        report = "Vulnerability Report\n"
        report += "====================\n"
        for vulnerability, result in findings.items():
            report += f"{vulnerability}:\n"
            if 'error' in result:
                report += f"Error: {result['error']}\n"
            else:
                report += f"Vulnerable: {result['vulnerable']}\n"
                report += f"Payload Used: {result['test_payload']}\n"
            report += "\n"
        return report
