
classDiagram
    class Main {
        +main() void
    }
    class Exploits {
        +sql_injection(url: str) dict
        +xss_attack(url: str) dict
        +command_injection(url: str) dict
    }
    class Report {
        +generate_report(findings: dict) str
    }
    class CLI {
        +start_interface() void
    }
    Main --> CLI
    CLI --> Exploits
    Exploits --> Report
